--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TAP10</title>
-<link rel="stylesheet" type="text/css" href="app.css">
+<link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body>
 
@@ -18,6 +18,6 @@
   <button id="js-startBtn" class="btn">START</button>
 </section>
 
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
