--- a/notification.html
+++ b/notification.html
@@ -8,15 +8,18 @@
   <link rel="manifest" href="./manifest.json">
   <link rel="stylesheet" type="text/css" href="vendor/bootstrap-4.4.1-dist/css/bootstrap.min.css">
   <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script
+  src="https://code.jquery.com/jquery-3.5.0.min.js"
+  integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+  crossorigin="anonymous"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
 
   <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-analytics.js"></script>
-
-  <!-- <script defer src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
-  <script defer src="https://www.gstatic.com/firebasejs/6.2.0/firebase-messaging.js"></script>
-  <script defer src="https://www.gstatic.com/firebasejs/6.2.0/firebase-firestore.js"></script> -->
+  <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-messaging.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
+  
   <script defer src="js/firebase.js"></script>
 </head>
 
