--- a/index.html
+++ b/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- アドレスバー等のブラウザのUIを非表示 -->
-<meta name="apple-mobile-web-app-capable" content="yes">
-<!-- default（Safariと同じ） / black（黒） / black-translucent（ステータスバーをコンテンツに含める） -->
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
-<!-- ホーム画面に表示されるアプリ名 -->
-<meta name="apple-mobile-web-app-title" content="TAP10">
-<!-- ホーム画面に表示されるアプリアイコン -->
-<link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
-<title>TAP10</title>
-<link rel="stylesheet" type="text/css" href="css/app.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- アドレスバー等のブラウザのUIを非表示 -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- default（Safariと同じ） / black（黒） / black-translucent（ステータスバーをコンテンツに含める） -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <!-- ホーム画面に表示されるアプリ名 -->
+  <meta name="apple-mobile-web-app-title" content="TAP10">
+  <!-- ホーム画面に表示されるアプリアイコン -->
+  <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
+  <title>TAP10</title>
+  <link rel="stylesheet" type="text/css" href="css/app.css">
+  <link rel="manifest" href="./manifest.json">
+  <link rel="stylesheet" type="text/css" href="vendor/bootstrap-4.4.1-dist/css/bootstrap.min.css">
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script
+  src="https://code.jquery.com/jquery-3.5.0.min.js"
+  integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+  crossorigin="anonymous"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-messaging.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
+  
+  <script defer src="js/firebase.js"></script>
 </head>
+
 <body>
 
-<section class="container">
-  <h1 class="title">10秒で何回タップできるか</h1>
-  <button id="js-tapBtn" class="btn-tap" disabled>
-    <span id="js-count"></span><br>タップ!!
-  </button>
-  <div class="time">残り時間 <span id="js-time"></span> 秒</div>
-  <button id="js-startBtn" class="btn">START</button>
-</section>
-
-<script src="js/app.js"></script>
+  <section class="container">
+    <h1 class="title">10秒で何回タップできるか</h1>
+    <button id="js-tapBtn" class="btn-tap" disabled>
+      <span id="js-count"></span><br>タップ!!
+    </button>
+    <div class="time">残り時間 <span id="js-time"></span> 秒</div>
+    <button id="js-startBtn" class="btn">START</button>
+  </section>
+  <p class="notice"></p>
+  <button id="EntryButton" onclick="getSubscription()">プッシュ通知を受け取る</button>
+  <button id="RemoveButton" onclick="removeSubscription()">プッシュ通知を解除する</button>
+  <script src="js/app.js"></script>
 </body>
+
 </html>
