--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
   <title>TAP10</title>
   <link rel="stylesheet" type="text/css" href="css/app.css">
-  <!-- <link rel="manifest" href="./manifest.json"> -->
+  <link rel="manifest" href="./manifest.json">
   <!-- <link rel="stylesheet" type="text/css" href="vendor/bootstrap-4.4.1-dist/css/bootstrap.min.css">
   <script
   src="https://code.jquery.com/jquery-3.5.0.min.js"
