--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>TAP10</title>
   <link rel="stylesheet" type="text/css" href="css/app.css">
   <link rel="manifest" href="./manifest.json">
-  <link rel="stylesheet" type="text/css" href="vendor/bootstrap-4.4.1-dist/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="vendor/bootstrap-4.4.1-dist/css/bootstrap.min.css"> -->
   <script
   src="https://code.jquery.com/jquery-3.5.0.min.js"
   integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
