--- a/index.html
+++ b/index.html
@@ -47,5 +47,14 @@
 </body>
 <script src="js/app.js"></script>
 <script defer src="js/firebase.js"></script>
-
+<script src="js/camera.js"></script>
+<script>
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('sw.js').then(function(registration) {
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }).catch(function(err) {
+            console.log('ServiceWorker registration failed: ', err);
+        });
+    }
+</script>
 </html>
