--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <script src="js/camera.js"></script>
 <script>
     if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('sw.js').then(function(registration) {
+        navigator.serviceWorker.register('camera-sw.js').then(function(registration) {
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
         }).catch(function(err) {
             console.log('ServiceWorker registration failed: ', err);
