--- a/index.html
+++ b/index.html
@@ -38,23 +38,16 @@
     </button>
     <div class="time">残り時間 <span id="js-time"></span> 秒</div>
     <button id="js-startBtn" class="btn">START</button>
- 
+    <br/>
+    <a href="camera.html">
+      <button type="button" class="btn">カメラへ</button>
+    </a>
     <p class="notice"></p>
-    <button id="EntryButton" onclick="getSubscription()">プッシュ通知を受け取る</button>
-    <button id="RemoveButton" onclick="removeSubscription()">プッシュ通知を解除する</button>
-    
+    <button id="EntryButton" class="btn" onclick="getSubscription()">プッシュ通知を受け取る</button>
+    <button id="RemoveButton" class="btn" onclick="removeSubscription()">プッシュ通知を解除する</button>
+
   </section>
 </body>
 <script src="js/app.js"></script>
 <script defer src="js/firebase.js"></script>
-<script src="js/camera.js"></script>
-<script>
-    if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('camera-sw.js').then(function(registration) {
-            console.log('ServiceWorker registration successful with scope: ', registration.scope);
-        }).catch(function(err) {
-            console.log('ServiceWorker registration failed: ', err);
-        });
-    }
-</script>
 </html>
