--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <!-- default（Safariと同じ） / black（黒） / black-translucent（ステータスバーをコンテンツに含める） -->
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <!-- ホーム画面に表示されるアプリ名 -->
-  <meta name="apple-mobile-web-app-title" content="TAP10">
+  <meta name="apple-mobile-web-app-title" content="り～ぎゃる">
   <!-- ホーム画面に表示されるアプリアイコン -->
   <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
-  <title>TAP10</title>
+  <title>り～ぎゃる</title>
   <link rel="stylesheet" type="text/css" href="css/app.css">
   <link rel="manifest" href="./manifest.json">
   <!-- <link rel="stylesheet" type="text/css" href="vendor/bootstrap-4.4.1-dist/css/bootstrap.min.css"> -->
