アイコン画像 差し替え

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <!-- ホーム画面に表示されるアプリ名 -->
   <meta name="apple-mobile-web-app-title" content="り～ぎゃる">
   <!-- ホーム画面に表示されるアプリアイコン -->
-  <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
+  <!-- <link rel="apple-touch-icon" href="images/icons/icon-152x152.png"> -->
+  <link rel="apple-touch-icon" href="images/icons/icon-152x152_02.png">
   <title>り～ぎゃる</title>
   <link rel="stylesheet" type="text/css" href="css/app.css">
   <link rel="manifest" href="./manifest.json">
