アイコン 背景色変更

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <!-- ホーム画面に表示されるアプリアイコン -->
   <!-- <link rel="apple-touch-icon" href="images/icons/icon-152x152.png"> -->
   <link rel="apple-touch-icon" href="images/icons/icon-152x152_02.png">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
   <title>り～ぎゃる</title>
   <link rel="stylesheet" type="text/css" href="css/app.css">
   <link rel="manifest" href="./manifest.json">
