input type file 追加

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <p class="notice"></p>
     <button id="EntryButton" class="btn" onclick="getSubscription()">プッシュ通知を受け取る</button>
     <button id="RemoveButton" class="btn" onclick="removeSubscription()">プッシュ通知を解除する</button>
+    
+    <br/>
+    <input type="file"  class="btn" name="upfile" id="upfile" accept="image/*" capture="camera" />
 
   </section>
 </body>
