--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     
     <br/>
     <input type="file"  class="btn" name="upfile" id="upfile" accept="image/*" capture="camera" />
+    <input type="file"  class="btn" name="upfile" id="upfile" />
 
   </section>
 </body>
