input type file の検証

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     
     <br/>
     <input type="file"  class="btn" name="upfile" id="upfile" accept="image/*" capture="camera" />
-    <input type="file"  class="btn" name="upfile" id="upfile" />
+    <input type="file"  class="btn" name="upfile_2" id="upfile_2" />
 
   </section>
 </body>
