--- a/index.html
+++ b/index.html
@@ -91,5 +91,6 @@
   </section>
 </body>
 <!-- <script src="js/app.js"></script> -->
+<script defer src="js/init_sw.js"></script>
 <script defer src="js/firebase.js"></script>
 </html>
